# opengl_demo

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  defines.h  index.md  index_buffer.cpp  index_buffer.h  main.cpp  shader.cpp  shader.h  sound_buffer.cpp  sound_device.cpp  sound_source.cpp  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h
data/shaders/: basic.fs  basic.vs
shader/: basic.fs  basic.vs
